fix: change z-index for the menu

--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -6,6 +6,7 @@
   left: 0;
   bottom: 0;
   right: 0;
+  z-index: 3;
   transition: visibility 0s linear $delay;
   pointer-events: all;
 
